--- a/src/k2/cmd/tpcc/CMakeLists.txt
+++ b/src/k2/cmd/tpcc/CMakeLists.txt
@@ -3,6 +3,6 @@ file(GLOB SOURCES "*.cpp")
 
 add_executable (tpcc_client ${HEADERS} ${SOURCES})
 
-target_link_libraries (tpcc_client PRIVATE tso_client appbase transport common cpo_client k23si_client Seastar::seastar)
+target_link_libraries (tpcc_client PRIVATE tso_client appbase transport common cpo_client k23si_client dto Seastar::seastar)
 
 install (TARGETS tpcc_client DESTINATION bin)
