--- a/src/k2/persistence/plog_service/CMakeLists.txt
+++ b/src/k2/persistence/plog_service/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
-add_library(plog_service STATIC ${HEADERS} ${SOURCES})
+add_library(plog_service OBJECT ${HEADERS} ${SOURCES})
 target_link_libraries (plog_service PRIVATE transport common cpo_client)
 
 # export the library in the common k2Targets
