Adding configurator server and client side

--- a/src/k2/CMakeLists.txt
+++ b/src/k2/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory (infrastructure)
 add_subdirectory (module)
 add_subdirectory (persistence)
 add_subdirectory (transport)
+add_subdirectory (configurator)
 add_subdirectory (tso)
