--- a/src/k2/cmd/controlPlaneOracle/CMakeLists.txt
+++ b/src/k2/cmd/controlPlaneOracle/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable (cpo_main cpo_main.cpp)
 
-target_link_libraries (cpo_main PRIVATE appbase common transport Seastar::seastar cpo_service infrastructure dto)
+target_link_libraries (cpo_main PRIVATE appbase common configurator transport Seastar::seastar cpo_service infrastructure dto)
 
 install (TARGETS cpo_main DESTINATION bin)
