--- a/src/k2/cmd/plog/CMakeLists.txt
+++ b/src/k2/cmd/plog/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable (plog_main plog_main.cpp)
 
-target_link_libraries (plog_main PRIVATE appbase common transport Seastar::seastar plog_service)
+target_link_libraries (plog_main PRIVATE appbase common configurator transport Seastar::seastar plog_service)
 
 install (TARGETS plog_main DESTINATION bin)
