--- a/src/k2/cmd/tso/CMakeLists.txt
+++ b/src/k2/cmd/tso/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable (tso tso_main.cpp)
 
-target_link_libraries (tso PRIVATE tso_service cpo_client appbase common transport Seastar::seastar)
+target_link_libraries (tso PRIVATE tso_service cpo_client appbase common configurator transport Seastar::seastar)
 
 install (TARGETS tso DESTINATION bin)
