adding test for configurator

--- a/src/k2/cmd/demo/CMakeLists.txt
+++ b/src/k2/cmd/demo/CMakeLists.txt
@@ -3,7 +3,9 @@ add_executable (k2_demo_rpc_echo rpc_echo.cpp)
 add_executable (k2_demo_rpc_service rpc_service.cpp)
 add_executable (k2_demo_tso tso_sample_app.cpp)
 add_executable (configurator_client configurator_client.cpp)
+add_executable (configurator_service configurator_service.cpp)
 
+target_link_libraries (configurator_service PRIVATE appbase configurator transport common Seastar::seastar)
 target_link_libraries (configurator_client PRIVATE appbase configurator transport common Seastar::seastar)
 target_link_libraries (k2_demo_service PRIVATE appbase configurator transport common Seastar::seastar)
 target_link_libraries (k2_demo_rpc_echo PRIVATE appbase configurator transport common Seastar::seastar)
