--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(include)
 add_subdirectory (cpo)
 add_subdirectory (transport)
 add_subdirectory (k23si)
+add_subdirectory (configurator)
 add_subdirectory (plog)
 add_subdirectory (dto)
 add_subdirectory (common)
