--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 enable_testing()
 include_directories(include)
 add_subdirectory (cpo)
+add_subdirectory (configurator)
 add_subdirectory (transport)
 add_subdirectory (k23si)
 add_subdirectory (plog)
